🌈 style: adjust static strct

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -92,8 +92,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.2.4/pace.min.js"
     integrity="sha512-2cbsQGdowNDPcKuoBd2bCcsJky87Mv0LEtD/nunJUgk6MOYTgVMGihS/xCEghNf04DPhNiJ4DZw5BxDd1uyOdw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- <script src="{% static 'mail/js/store.js' %}"></script>
-<script src="{% static 'mail/js/api.js' %}"></script>
-<script src="{% static 'mail/js/templates.js' %}"></script> -->
-<script src="{% static 'mail/js/inbox.js' %}"></script>
+<script src="{% static 'mail/inbox.js' %}"></script>
 {% endblock %}
